[package]
name = "nginx_spcgen"
description = "Nginx Simple Proxy Config Generator - 简单 Nginx 反向代理配置文件生成工具"
authors = ["Neko <neko@eroneko.eu.org>"]
version = "0.1.7"
edition = "2021"
default-run = "nginx_spcgen"

readme = "README.md"
repository = "https://github.com/nekokit/nginx-spcgen"
license = "Apache-2.0"

[lib]
name = "nginx_spcgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.12"
